# homotopy_based_planning

./: CMakeLists.txt  package.xml
include/homotopy_based_planning/: h_signature_astar.hpp  planar_rectangles_circles_environment.h  three_dimensional_environment.h
nodes/: planar_rectangles_circles_node_fig12.cpp  planar_rectangles_circles_node_fig13.cpp  planar_rectangles_circles_node_fig14.cpp  three_dimensional_node_fig17a.cpp  three_dimensional_node_fig17b.cpp  three_dimensional_node_fig18a.cpp  three_dimensional_node_fig18b.cpp
src/: planar_rectangles_circles_environment.cpp  three_dimensional_environment.cpp
